5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_994.log
== TEST (2019-03-14 16:15:43) 
-- CODE:
print("")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:56:45) 
-- CODE:
print("")
variavel1="Universidade Federal do Amazonas"
print"variavel1
"
-- ERROR:
File "XXXX", line 3
    print"variavel1
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:57:12) 
-- CODE:
print("")
variavel1="Universidade Federal do Amazonas"
print"variavel1"
"
-- ERROR:
File "XXXX", line 3
    print"variavel1"
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:57:35) 
-- CODE:
print("")
variavel1="Universidade Federal do Amazonas"
print("variavel1")
"
-- ERROR:
File "XXXX", line 4
    "
    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:57:47) 
-- CODE:
print("")
variavel1="Universidade Federal do Amazonas"
print("variavel1")

-- OUTPUT:
variavel1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:59:58) 
-- CODE:
a="Universidade"
b="Federal do"
c="Amazonas"
print("a+b+c")

-- OUTPUT:
a+b+c
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:03:00) 
-- CODE:
a="Universidade"
print("a")
b="Federal do"
print("b")
c="Amazonas"
print("c")
print("a+b+c")


-- OUTPUT:
a
b
c
a+b+c
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:04:15) 
-- CODE:
a="Universidade"
print(a)
b="Federal do"
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- OUTPUT:
Universidade
Federal do
Amazonas
UniversidadeFederal doAmazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:04:42) 
-- CODE:
a="Universidade "
print(a)
b="Federal do"
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- OUTPUT:
Universidade 
Federal do
Amazonas
Universidade Federal doAmazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:04:54) 
-- CODE:
a="Universidade "
print(a)
b="Federal do "
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- OUTPUT:
Universidade 
Federal do 
Amazonas
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:05:34) 
-- CODE:
a="Universidade "
print(a)
b="Federal do "
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- OUTPUT:
Universidade 
Federal do 
Amazonas
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:31:51) 
-- CODE:
a="Universidade "
print(a)
b="Federal do "
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- OUTPUT:
Universidade 
Federal do 
Amazonas
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 20:31:54) 
-- CODE:
a="Universidade "
print(a)
b="Federal do "
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- EXECUTION TIME:
0.175775
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade 
Federal do 
Amazonas
Universidade Federal do Amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:32:02) 
-- CODE:
a="Universidade "
print(a)
b="Federal do "
print(b)
c="Amazonas"
print(c)
print(a+b+c)


-- OUTPUT:
Universidade 
Federal do 
Amazonas
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:32:30) 
-- CODE:
a="Universidade "
print(a)
b="Federal do "
print(b)
c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade 
Federal do 
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:32:51) 
-- CODE:
a="Universidade "

b="Federal do "

c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:33:04) 
-- CODE:
a="Universidade "

b="Federal do "

c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:33:14) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 20:33:16) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- EXECUTION TIME:
0.155097
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:16) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:16) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:16) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:27) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:43:30) 
-- CODE:
a="Universidade "
b="Federal do "
c="Amazonas"
print(a+b+c)


-- EXECUTION TIME:
0.132219
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
